# pcheck

./: .gitignore  Cargo.toml  DEV_GUIDE.md  README.md  chat.md  getapplegpudetail.md  pck
docs/: code-standards.md  codebase-summary.md  design-guidelines.md  project-overview-pdr.md  project-roadmap.md  system-architecture.md
docs/wireframes/: output-mockup.html
examples/: test_sysinfo.rs
pchecker/: .gitignore  Cargo.toml  README.md
pchecker/docs/: project-roadmap.md  system-architecture.md
pchecker/plans/reports/: scout-251225-1936-pchecker-rust-analysis.md  tester-251225-1748-rust-test-suite.md
pchecker/src/: fmt.rs  lang.rs  main.rs  prompt.rs
pchecker/src/hw/: cpu.rs  disk.rs  mod.rs  ram.rs
pchecker/src/platform/: mod.rs
pchecker/src/sensors/: frequency.rs  mod.rs  temp.rs
pchecker/src/stress/: cpu.rs  mod.rs  ram.rs
plans/: README.md
plans/251225-pchecker-mvp/: phase-01-mvp-setup.md  phase-02-platform-detection.md  phase-03-cpu-ram-disk.md  phase-04-gpu-detection.md  phase-05-output-formatting.md  phase-06-testing-build.md  plan.md
plans/251226-1037-gpu-platform-refactor/: plan.md
plans/251226-1207-code-cleanup/: phase-01-fix-compilation.md  phase-02-remove-duplicates.md  phase-03-fix-hardcoded.md  plan.md
plans/251226-1351-vietnamese-translation/: plan.md
plans/completed/: v0.1.0-summary.md
plans/reports/: brainstormer-251226-0752-gpu-health-check-hybrid.md  docs-manager-251226-1428-documentation-update.md  researcher-251225-1102-gpu-detection-cli-rust.md  (+5 more)
reports/: docs-manager-251225-2237-documentation-update.md  planner-251225-2150-multi-disk-smart-enhancement.md  scout-external-251225-2234-pchecker-docs-analysis.md
src/: fmt.rs  lang.rs  main.rs  prompt.rs
src/ai/: mod.rs
(+50 files in other folders)
