[package]
name = "pchecker"
version = "0.2.0"
edition = "2021"
description = "Cross-platform hardware detection CLI tool"
license = "MIT"
repository = "https://github.com/Khoa280703/pcheck"
authors = ["Khoa280703"]

[dependencies]
sysinfo = "0.37"
clap = { version = "4.5", features = ["derive"] }
num_cpus = "1.16"
fastrand = "2.1"

[profile.release]
opt-level = "z"
lto = true
codegen-units = 1
strip = true
panic = "abort"
