[package]
name = "pchecker"
version = "0.2.0"
edition = "2021"
description = "Cross-platform hardware detection CLI tool"
license = "MIT"
repository = "https://github.com/Khoa280703/pcheck"
authors = ["Khoa280703"]

[dependencies]
sysinfo = "0.37"
clap = { version = "4.5", features = ["derive"] }
num_cpus = "1.16"
fastrand = "2.1"

# GPU compute stress test
wgpu = { version = "0.20", optional = true }
pollster = { version = "0.3", optional = true }
bytemuck = { version = "1.14", optional = true }

# Apple SMC temperature reading (macOS only)
smc = { version = "0.2", optional = true }

[features]
default = []
gpu-compute = ["wgpu", "pollster", "bytemuck"]
apple-smc = ["smc"]

[profile.release]
opt-level = "z"
lto = true
codegen-units = 1
strip = true
panic = "abort"
