[package]
name = "pchecker"
version = "0.1.0"
edition = "2021"
description = "Cross-platform hardware detection CLI tool"
license = "MIT"
repository = "https://github.com/Khoa280703/pcheck"
authors = ["Khoa280703"]

[dependencies]
sysinfo = "0.37"
clap = { version = "4.5", features = ["derive"] }

[profile.release]
opt-level = "z"
lto = true
codegen-units = 1
strip = true
panic = "abort"
